CSS fix for skip links (nav on mobile devices)

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -502,13 +502,13 @@ blockquote {
   text-decoration: none;
   position: absolute;
   z-index: 10;
-  left: -7000px;
+  right: 50px;
   top: 10px;
   padding: 3px 20px;
   font: normal 400 1rem "Fira Sans", sans-serif;
+  clip: rect(1px,1px,1px,1px);
 }
 
 .skip-link a:focus {
-  left: auto;
-  right: 50px;
+  clip: auto;
 }
